--- a/src/main/resources/templates/MensajeEdit.html
+++ b/src/main/resources/templates/MensajeEdit.html
@@ -3,11 +3,6 @@
 <head>
 <meta charset="UTF-8">
 
-<link rel="stylesheet"
-	href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
-	integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
-	crossorigin="anonymous">
-
 <link rel="stylesheet" th:href="@{/css/styles.css}">
 <link rel="stylesheet" th:href="@{/css/formulario.css}">
 <link rel="stylesheet" th:href="@{/css/bootstrap.css}" />
@@ -16,10 +11,10 @@
 <title>Gestion Incidencias</title>
 </head>
 <body>
-
 	<br>
-	<h3 style="text-align: center;">NUEVO MENSAJE</h3>
+	<br>
 	<div id="wrapper">
+
 
 		<form method="post" th:object="${mensaje}"
 			th:action="@{/mensaje/save}">
@@ -30,34 +25,31 @@
 
 			<div class="form-group">
 				<label>Título:</label> <input type="text" class="form-control"
-					th:field="*{titulo}" placeholder="Título">
+					th:field="*{titulo}" placeholder="Título del mensaje">
 				<div th:if="${#fields.hasErrors('titulo')}" th:errors="*{titulo}"
-					class="has-error help-inline">Título Error</div>
-
+					class="has-error help-inline">firstName Error</div>
 			</div>
 
 			<div class="form-group">
-				<label>Mensaje:</label>
-				<textarea rows="7" cols="25" th:field="*{contenido}"
-					class="form-control" placeholder="Mensaje">
+				<label>Contenido:</label>
+				<textarea rows="3" cols="25" th:field="*{contenido}"
+					class="form-control" placeholder="Contenido">
 						 </textarea>
 				<div th:if="${#fields.hasErrors('contenido')}"
-					th:errors="*{contenido}" class="has-error help-inline">Contenido
+					th:errors="*{contenido}" class="has-error help-inline">firstName
 					Error</div>
 			</div>
-			
+
+
 			<div class="form-group">
 				<label></label> <input type="hidden" class="form-control"
-					th:field="*{incidencia}" placeholder="Incidencia" >
+					th:field="*{incidencia}" placeholder="Cliente" readonly="true">
 			</div>
-			
-			<button type="submit" class="btn btn-primary">Nuevo mensaje</button>
+
+			<button type="submit" class="btn btn-primary">Editar mensaje</button>
 
 		</form>
 
 	</div>
 </body>
-
-
-
 </html>
