--- a/src/main/resources/templates/UserForm.html
+++ b/src/main/resources/templates/UserForm.html
@@ -5,13 +5,13 @@
 <link rel="stylesheet" th:href="@{/css/bootstrap.css}" />
 <link rel="stylesheet" th:href="@{/css/custom.css}" />
 
-<title>Spring10a-MVC. Formulario</title>
+<title>Gestion Incidencias</title>
 </head>
 <body>
 
 	<div class="container">
 		<h1>
-			Spring10a-MVC<br />Formulario 2
+			USER<br />Formulario 2
 		</h1>
 		<div align="center">
 			<h2>FORMULARIO DE USUARIOS (add/edit)</h2>
