--- a/src/main/resources/templates/UserList.html
+++ b/src/main/resources/templates/UserList.html
@@ -5,14 +5,14 @@
 <link rel="stylesheet" th:href="@{/css/bootstrap.css}" />
 <link rel="stylesheet" th:href="@{/css/custom.css}" />
 
-<title>Spring10a-MVC</title>
+<title>Gestion Incidencias</title>
 </head>
 <body>
 
 	<div class="container">
 
 		<h1>
-			Spring10a-MVC<br />
+			Gestion Incidencias<br />
 		</h1>
 
 		<h2>LISTADO DE USUARIOS</h2>
