--- a/src/main/resources/templates/IncidenciaEdit.html
+++ b/src/main/resources/templates/IncidenciaEdit.html
@@ -8,7 +8,7 @@
 <link rel="stylesheet" th:href="@{/css/bootstrap.css}" />
 <link rel="stylesheet" th:href="@{/css/custom.css}" />
 
-<title>Spring10a-MVC. EDITAR</title>
+<title>Gestion Incidencias</title>
 </head>
 <body>
 	<br>
